--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "body-parser": "^1.20.1",
+    "emailjs-com": "^3.2.0",
     "express": "^4.18.2",
     "html-entities": "^2.3.3",
     "react": "^18.2.0",
